swift_shared("tweedy_service") {
  deps = [
    "//apps/tweedy/resources/proto:TweedyApi",
    "//kit/swift/Base",
    "//kit/swift/Graphics",
    "//kit/swift/App",
    "//kit/swift/Net",
    "//kit/swift/Data",
    "//kit/swift/Engine",
    "//kit/swift/Channel",
    "//kit/swift/Javascript",
    "//kit/swift/Python",
    "//kit/swift/Service",
    "//kit/swift/PosixShim",
    "//kit/swift/Compositor",
    "//kit/swift/Route",
    "//kit/swift/Web",
    "//kit/swift/PDF",
    "//kit/swift/Gpu",
    "//kit/swift/GL",
    "//kit/swift/_C",
    "//kit/swift/ThirdParty/ProtocolBuffers",
    "//kit/swift/ThirdParty/Libevent",
    "//kit/swift/ThirdParty/icu4c:icuuc",
    "//kit/swift/ThirdParty/icu4c:icui18n",
    "//kit/swift/ThirdParty/CGRPCZlib",
    "//third_party/zlib",
    "//third_party/python"
  ]
  sources = [
    "Sources/Engine/Handlers.swift",
    "Sources/Engine/TweedyContext.swift",
    "Sources/Engine/TweedyProvider.swift"
  ]
  ldflags = [
    "-lffi",
  ]
}
